Functional tests. Bibliography

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -18,6 +18,7 @@
 \definecolor{darkgray}{rgb}{.4,.4,.4}
 \definecolor{purple}{rgb}{0.65, 0.12, 0.82}
 %-Colors definitions
+\bibliographystyle{plain}
 
 \lstdefinelanguage{JavaScript}{
   keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
@@ -120,6 +121,8 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 
 \chapter{Podsumowanie}
 \input{summary/summary.tex}
+
+\bibliography{bibliography}
 
 \chapter{Dodatki}
 \input{addons/addons.tex}
