--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -6,3 +6,21 @@
     year = {2009},
     note = {\url{http://www.linuxfoundation.org/collaborate/workgroups/networking/netem}}
 }
+
+@misc{
+    broadway1,
+    author = "Alexander Larsson",
+    title = "Gtk+ 3.0 html5 backend",
+    howpublished = "Blog",
+    year = {2010},
+    note = {\url{http://blogs.gnome.org/alexl/2010/11/26/gtk-3-0-html5-backend/}}
+}
+
+@misc{
+    broadway2,
+    author = "Alexander Larsson",
+    title = "Gtk+ HTML backend update",
+    howpublished = "Blog",
+    year = {2011},
+    note = {\url{http://blogs.gnome.org/alexl/2011/03/15/gtk-html-backend-update/}}
+}
