Bibliography. Work-table

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -2,7 +2,6 @@
     netem,
     author = "Linux Foundation",
     title = "netem",
-    howpublished = "Website",
     year = {2009},
     note = {\url{http://www.linuxfoundation.org/collaborate/workgroups/networking/netem}}
 }
@@ -11,7 +10,6 @@
     broadway1,
     author = "Alexander Larsson",
     title = "Gtk+ 3.0 html5 backend",
-    howpublished = "Blog",
     year = {2010},
     note = {\url{http://blogs.gnome.org/alexl/2010/11/26/gtk-3-0-html5-backend/}}
 }
@@ -24,3 +22,41 @@
     year = {2011},
     note = {\url{http://blogs.gnome.org/alexl/2011/03/15/gtk-html-backend-update/}}
 }
+
+@Manual{qwidget,
+	title = "QWidget Class Reference",
+	author = "Nokia Corporation",
+	year = {2011},
+	note = {\url{http://doc.qt.digia.com/qt/qwidget.html}}
+}
+
+@Manual{ld,
+	title = "Linux Programmer's Manual, ld.so(8)",
+	authors = "David  Engel, Eric Youngdale, Peter MacDonald, Hongjiu Lu, Linus Torvalds, Lars Wirzenius and Mitch D'Souza",
+	year = {2007},
+}
+
+@misc{
+    cssfont,
+    author = "Refsnes Data",
+    title = "CSS font Property reference",
+    year = {2012},
+    note = {\url{http://www.w3schools.com/cssref/pr_font_font.asp}}
+}
+
+@misc{
+    compositionmode,
+    title = "QPainter Class Reference, \emph{QPainter::CompositionMode}",
+    author = "Nokia Corporation",
+   	year = {2011},
+    note = {\url{http://doc.qt.digia.com/qt/qpainter.html#CompositionMode-enum}}
+}
+
+@Manual{qtkey,
+	title = "Qt Namespace Reference, \emph{Key enum}",
+	author = "Nokia Corporation",
+	year = {2011},
+	note = {\url{http://doc.qt.digia.com/qt/qt.html#Key-enum}}
+}
+
+http://doc.qt.digia.com/qt/qt.html#Key-enum
