--- a/thesis/implementation/render/state.tex
+++ b/thesis/implementation/render/state.tex
@@ -235,7 +235,7 @@ Pełne wsparcie w \emph{canvas}.
 \end{itemize}
 
 \subsubsection{Czcionka}
-Opis czcionki reprezentowany jest w formacie CSS\footnote{http://www.w3schools.com/cssref/pr\_font\_font.asp} i obejmuje kolejno:
+Opis czcionki reprezentowany jest w formacie CSS \cite{cssfont} i obejmuje kolejno:
 \begin{itemize}
 \item styl,
 \item wariant,
@@ -252,7 +252,7 @@ Przykład:
 Pełne wsparcie w \emph{canvas}. 
 
 \subsubsection{Metoda kompozycji}
-Parametr ten określa w jaki sposób łączone są kolejne nakładające się warstwy.\footnote{http://doc.qt.digia.com/qt/qpainter.html\#CompositionMode-enum}
+Parametr ten określa w jaki sposób łączone są kolejne nakładające się warstwy.\cite{compositionmode}
 \begin{itemize}
 \item \emph{source-atop}
 \item \emph{source-in}
