--- a/thesis/problem_definition/acl.tex
+++ b/thesis/problem_definition/acl.tex
@@ -2,7 +2,7 @@ Ponieważ jednym z celów projektu było umożliwienie uruchamiania pełnoprawny
 
 W związku z powyższym, stworzono mechanizm list \emph{ACL} (ang. Access Control Lists), który pozwala administratorowi systemu na zdefiniowane, które aplikacje mogą być uruchamiane przez klientów, a w przypadku których zostanie wyświetlony komunikatu o braku dostępu.
 
-Listy kontroli dostępu przechowywane są w pliku konfiguracyjnym serwera w postaci danych w formacie \emph{XML}\footnote{(ang. Extensible Markup Language}. Nazwy aplikacji w postaci komend linii poleceń mogą więc być definiowane ręcznie w dowolnym edytorze tekstowym lub za pomocą pliku wykonywalnego serwera poprzez poniższe argumentów wywołania programu:
+Listy kontroli dostępu przechowywane są w pliku konfiguracyjnym serwera w postaci danych w formacie \emph{XML}\footnote{ang. Extensible Markup Language}. Nazwy aplikacji w postaci komend linii poleceń mogą więc być definiowane ręcznie w dowolnym edytorze tekstowym lub za pomocą pliku wykonywalnego serwera poprzez poniższe argumentów wywołania programu:
 
 \begin{itemize}
 \item \emph{accept-all}
