--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -11,6 +11,7 @@
 \usepackage{listings}
 \usepackage{color}
 \usepackage[usenames,dvipsnames]{xcolor}
+\usepackage{multirow}
 
 %+Colors definitions
 \definecolor{white}{rgb}{1,1,1}
