Thesis: "Polozenie obrazow & sekcja 3.1"

--- a/thesis/problem_definition/data.tex
+++ b/thesis/problem_definition/data.tex
@@ -1,7 +1,7 @@
 
 Każdy element graficznego interfejsu aplikacji (\emph{QWidget}) jest renderowany w momencie odebrania zdarzenia \emph{QPaintEvent} z kolejki zdarzeń głównego wątku aplikacji. Dzięki temu istnieje łatwy sposób na uzyskanie informacji o tym kiedy oraz ktory element należy przerenderować aby uaktualnić jego wygląd po stronie klienta. Problemem w dalszyb ciągu pozostaje jednak sposób na uzyskanie informacji o samym wyglądzie. 
 
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[width=1.0\linewidth]{img/arch-hook}
 \caption{Schemat powiązań modułu WebSocket z aplikacją \emph{Qt/KDE}.}
