--- a/thesis/problem_definition/render.tex
+++ b/thesis/problem_definition/render.tex
@@ -1,5 +1,5 @@
 
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.8\linewidth]{img/arch-render}
 \caption{Schemat architektury odtwarzania wyglądu aplikacji po stronie klienta.}
