--- a/thesis/problem_definition/communication.tex
+++ b/thesis/problem_definition/communication.tex
@@ -1,9 +1,9 @@
 \section{Komunikacja między klientem a serwerem}
 %Specyfiką problemu jest jego dwuetapowość. W pierwszym etapipe klient inicjuje połączenie jednorazowo wysyłając zapytanie zawierające informacje o aplikacji, którą klient chce uruchomić oraz identyfikatorze klienta. W drugiej kolejności wymagane jest utworzenie kanału komunikacyjnego między klientem a procesem aplikacji. 
 
-Do realizacji tego zadania stworzony został prosty serwer działający w oparciu o protokół \emph{HTTP}. Jako zasób domyślny udostępnia on listę dostępnych aplikacji, które klient może uruchomić. Lista ta jest w pełni konfigurowalna po stronie serwera. Inicjalizacja połączenia polega na wysłaniu przez klienta nazwy wybranej aplikacji. Serwer po pomyślnej weryfikacji przydziela klientowi unikatowy identyfikator sesji, uruchamia proces aplikacji i wysyła klientowi skrypt w języku JavaScript zajmujący się przetwarzaniem po stronie klienta.
+Do realizacji tego zadania stworzony został prosty serwer WWW działający w oparciu o protokół \emph{HTTP}. Jego architektura została przedstawiona na rysunku \ref{fig:arch-www}. Jako zasób domyślny udostępnia on listę dostępnych aplikacji, które klient może uruchomić. Lista ta jest w pełni konfigurowalna po stronie serwera. Inicjalizacja połączenia polega na wysłaniu przez klienta identyfikatora wybranej aplikacji. Serwer po pomyślnej weryfikacji przydziela klientowi unikatowy identyfikator sesji, uruchamia proces aplikacji i wysyła klientowi skrypt w języku JavaScript zajmujący się przetwarzaniem po stronie klienta. Każde zapytanie klienta jest weryfikowane za pomocą modułu ACL\footnote{ang. Access Control List}, który sprawdza czy konfiguracja serwera zezwala na uruchamianie żądanych aplikacji. Szczegółowy opis modułu przedstawiono w sekcji \ref{sec:server-security}.
 
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[width=1.0\linewidth]{img/arch-www}
 \caption{Schemat komunikacji z serwerem WWW.}
@@ -16,7 +16,7 @@ Do realizacji tego zadania stworzony został prosty serwer działający w oparci
 
 Do rozwiązania tego problemu konieczne jest utworzenie ciągłego kanału komunikacyjnego między klientem a procesem aplikacji, za pomocą którego będzie możliwe przesyłanie informacji o wyglądzie interfejsu aplikacji oraz informowanie aplikacji o zdarzeniach generowanych przez użytkownika po stronie przeglądarki. Jako, że za cel przyjęte zostało założenie o nieingerowaniu bezpośrednio w kod skompilowanych już aplikacji, postawiono na technikę umożliwiającą załadowanie kodu biblioteki dynamicznej do przestrzeni pamięciowej procesu aplikacji tuż przed jego uruchomieniem. Kod ten ma za zadanie utrzymanie połączenia oraz transmisję danych między klientem a aplikacją.
 
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[width=1.0\linewidth]{img/arch-socket}
 \caption{Schemat komunikacji z modułem WebSocket.}
