--- a/thesis/problem_definition/server-flow.tex
+++ b/thesis/problem_definition/server-flow.tex
@@ -1,5 +1,5 @@
 
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.8\linewidth]{img/arch-lib}
 \caption{Schemat wewnętrznych przepływów danych w module WebSocket.}
