--- a/thesis/problem_definition/communication.tex
+++ b/thesis/problem_definition/communication.tex
@@ -22,3 +22,10 @@ Do rozwiązania tego problemu konieczne jest utworzenie ciągłego kanału komun
 \caption{Schemat komunikacji z modułem WebSocket.}
 \label{fig:arch-socket}
 \end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1.0\linewidth]{img/arch-hook}
+\caption{Schemat powiązań modułu WebSocket z aplikacją \emph{Qt/KDE}.}
+\label{fig:arch-hook}
+\end{figure}
