--- a/thesis/problem_definition/simulation.tex
+++ b/thesis/problem_definition/simulation.tex
@@ -9,6 +9,7 @@ Interakcja użytkownika z aplikacją sprowadza się do obsługi następujących 
 \end{enumerate}
 Większość z wyżej wymienionych elementów jest obsługiwana jako zdarzenia w języku JavaScript większości dzisiejszych przeglądarek. Proponowane podejście na rozwiązanie tego zagadnienia polega na stworzeniu formatu danych bazując na notacji JSON (JavaScript Object Notation). Dane w tym formacie przesyłane do serwera są następnie poddawane walidacji i konwersji na obiekty zdarzeń biblioteki \emph{Qt}. Zdarzenia takie są następnie przesyłane do kolejki zdarzeń w głównym wątku aplikacji.
 
-Odbiorcą zdarzenia jest widget, który wygenerował dane zdarzenie po stronie przeglądarki bazując na hierarchicznej budowie interfejsu użytkownika. Wyjątkami są tutaj zdarzenia klawiatury, które nie mają bezpośredniego odbiorcy w momencie ich zaistnienia. Aplikacja sama decyduje o tym, który element powinien odebrać zdarzenie. Domyślnie jest to widget, który atualnie posiada tzw. focus, a to z kolei zależy od poprzednich zdarzeń oraz logiki samego programu. W celu symulacji podobnego zachowania decyzja o odbiorcy zdarzeń klawiatury podejmowana jest po stronie serwera bazując na aktualnym stanie aplikacji.
+Odbiorcą zdarzenia jest obiekt, który na rysunku \ref{fig:arch-hook} został oznaczony jako Event Dispather. Moduł ten jest następnie odpowiedzialny za podjęcie akcji w odpowiedzi na dane zdarzenie, polegających na wywołaniu odpowiednich metod na elemencie interfejsu graficznego aplikacji, który wygenerował dane zdarzenie po stronie przeglądarki bazując na hierarchicznej budowie interfejsu użytkownika.
+Wyjątkami są tutaj zdarzenia klawiatury, które nie mają bezpośredniego odbiorcy w momencie ich zaistnienia. Aplikacja na ogół sama decyduje o tym, który element powinien odebrać zdarzenie. Domyślnie jest to widget, który atualnie posiada tzw. focus, a to z kolei zależy od poprzednich zdarzeń oraz logiki samego programu. W celu symulacji podobnego zachowania moduł Event Dispather wybiera element interfejsu bazując na aktualnym stanie aplikacji i wysyła informację o wciśnięciu wirtualnych klawiszy. 
 
-// TODO: Przepływy danych / d. kolaboracji (nie wiem co to drugie ma znaczyć :P)
+Taka struktura modułu obsługi zdarzeń zapewnia jednolitość działania aplikacji pomiędzy różnymi wersjami biblioteki Qt.
