--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -59,4 +59,34 @@
 	note = {\url{http://doc.qt.digia.com/qt/qt.html#Key-enum}}
 }
 
-http://doc.qt.digia.com/qt/qt.html#Key-enum
+@TechReport{html5w3,
+authors = "Robin Berjon, Travis Leithead, Erika Doyle Navara, Edward O'Connor, Silvia Pfeiffer",
+title = {HTML5. A vocabulary and associated APIs for HTML and XHTML},
+year = {2012},
+note = {\url{http://www.w3.org/TR/2012/CR-html5-20121217/}}
+}
+
+@TechReport{plan2014,
+authors = "Grupa W3",
+title = {Plan 2014},
+year = {2012},
+note = {\url{http://dev.w3.org/html5/decision-policy/html5-2014-plan.html}}
+}
+
+@Book{html5games,
+author = {Jacob Seidelin},
+title = {HTML5 Games: Creating Fun with HTML5, CSS3, and WebGL},
+publisher = {Wiley; 1 edition},
+year = {2011}
+}
+
+@Book{responsive,
+author = {Ethan Marcotte},
+title = {Responsive Web Design},
+publisher = {A book apart},
+year = {2011}
+}
+
+
+
+html5games
