--- a/thesis/introduction/introduction.tex
+++ b/thesis/introduction/introduction.tex
@@ -1,5 +1,5 @@
 
-W dzisiejszych czasach coraz bardziej powszechne staje się wykorzystanie przeglądarek do zadań, do których wcześniej używane były duże aplikacje klienckie. Powstają rozwiązania, które starają się oddzielić logikę obliczeniową od warstwy prezentacji, przenosząc jednocześnie tę pierwszą na stronę serwera. Rozwój technologii HTML5 rozszerzającej standard o elementy canvas, websocket, webworkers i inne umożliwia tworzenie aplikacji o możliwościach takich samych jakie niegdyś były dostępne tylko w programach desktopowych. Co więcej gwarantuje międzyplatformowość nie tylko w rozumieniu softwareowym -- jedna aplikacja dostępna jest zarówno na komputerach osobistych, tabletach, telefonach i innych urządzeniach wyposażonych w nowoczesną przeglądarkę. Przy użyciu bardzo związanej z HTML5 technologii CSS3 możliwie jest tworzenie jednej aplikacji, która będzie użytkowalna niezależnie od wielkości ekranu urządzenia.
+W dzisiejszych czasach coraz bardziej powszechne staje się wykorzystanie przeglądarek do zadań, do których wcześniej używane były duże aplikacje klienckie. Powstają rozwiązania, które starają się oddzielić logikę obliczeniową od warstwy prezentacji, przenosząc jednocześnie tę pierwszą na stronę serwera. Rozwój technologii HTML5 rozszerzającej standard o elementy canvas, websocket, webworkers i inne umożliwia tworzenie aplikacji o możliwościach takich samych jakie niegdyś były dostępne tylko w programach desktopowych. Co więcej gwarantuje międzyplatformowość nie tylko w rozumieniu softwareowym -- jedna aplikacja dostępna jest zarówno na komputerach osobistych, tabletach, telefonach i innych urządzeniach wyposażonych w nowoczesną przeglądarkę. Przy użyciu bardzo związanej z HTML5 technologii CSS3 możliwie jest tworzenie jednej aplikacji, która będzie użytkowalna niezależnie od wielkości ekranu urządzenia.\cite{responsive}
 
 W niektórych rozwiązaniach zastąpienie starych aplikacji desktopowych nowymi aplikacjami webowymi (przeglądarkowymi) jest jednak niemożliwe, czasochłonne lub zbyt kosztowne.
 
@@ -13,7 +13,7 @@ Takie rozwiązanie wykorzysta pełne możliwości elementu \emph{canvas} z HTML5
 W rozdziale 2 zostały krótko przedstawione użyte technologie - HTML5, biblioteka Qt i projekt GTK Broadway. Rozdział 3 opisuje problem i prototypową propozycję rozwiązania - protokół komunikacyjny, sposób interakcji użytkownika oraz proste zabezpieczenie serwera. Rozdział 4 opisuje dokładnie implementację. Z racji na swoją długość został podzielony na kilka części. Osobno zaprezentowano protokół, system zdarzeń po stronie klienta (przeglądarki) oraz szczegóły implementacji po obu stronach. W tym rozdziale zawarte zostały również informacje o licznych napotkanych problemach przy tworzeniu projektu. W rozdziale 5 zaprezentowano wyniki testów w środowisku lokalnym oraz w Internecie.
 Tablica \ref{tab:podzial} przedstawia podział podczas pisania rozdziałów pracy.
 
-\begin{table}
+\begin{table}[H]
 \centering  
 \begin{tabular}{ |l|l|c|c|}
 \hline
