--- a/thesis/tests/tests.tex
+++ b/thesis/tests/tests.tex
@@ -29,7 +29,7 @@ Z powodu poziomu skomplikowania aplikacji testy funkcjonalne przeprowadzono ręc
 
 Aplikacje były sprawdzane pod względem poprawności wyświetlania elementów, funkcjonalności menadżera okien i możliwości interakcji użytkownika. Przykładowe aplikacje uruchomione przy pomocy projektu przedstawione są na rysunkach \ref{dolphin}, \ref{qtcreator} oraz \ref{konsole}.
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth,height=!]{img/dolphin.png}
   \caption{Aplikacja \emph{Dolphin}}
@@ -37,14 +37,14 @@ Aplikacje były sprawdzane pod względem poprawności wyświetlania elementów, 
 \end{figure}
 
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth,height=!]{img/qtcreator.png}
   \caption{Aplikacja \emph{QtCreator}}
   \label{qtcreator}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth,height=!]{img/konsole.png}
   \caption{Aplikacja \emph{Konsole}}
