--- a/thesis/implementation/problems.tex
+++ b/thesis/implementation/problems.tex
@@ -45,7 +45,7 @@ Podczas implementacji obcinania (ang. clipping) w kliencie rozpoznano problem z 
 
 \subsubsection{Synchroniczne ładowanie obrazków}
 
-Wszystkie grafiki używane do renderowania w elementach \emph{canvas} wymagają pełnego załadowania ich do pamięci przeglądarki. Język \emph{Javascript} nie pozwala na przeprowadzenie tej operacji synchroniczne. Pełny obraz dostępny jest dopiero w asynchronicznym wywołaniu zwrotnym (ang. callback), które jest całkowicie niedeterministyczne czasowo, to znaczy nie jest określona kolejność rozpoczęcia wczytywania obrazów. Protokół komunikacji i specyfika elemntu \emph{canvas} -- pozwalająca na rysowanie tylko na wierzchu elementu -- wymusza rysowanie elementów na widgetach w odpowiedniej kolejności. Jest to sprzeczne z asynchronicznością wywołań zwrotnych, dlatego przed rozpoczęciem rysowania danego widgetu ładowane są wszystkie potrzebne obrazki. Używana jest do tego metoda \emph{delayCallback} w listingu \ref{lst:source_images_delay}. Pierwszym argumentem jest liczba obrazków do załadowania, drugim funkcja zwrotna, która zostanie wywołana po załadowaniu się wszystkich obrazów. Funkcja zwraca domknięcie, które należy wywołać w każdym wywołaniu zwrotnym załadowania obrazu (\emph{onload}).
+Wszystkie grafiki używane do renderowania w elementach \emph{canvas} wymagają pełnego załadowania ich do pamięci przeglądarki. Język \emph{Javascript} nie pozwala na przeprowadzenie tej operacji synchroniczne. Pełny obraz dostępny jest dopiero w asynchronicznym wywołaniu zwrotnym (ang. callback), które jest całkowicie niedeterministyczne czasowo, to znaczy nie jest określona kolejność rozpoczęcia wczytywania obrazów. Protokół komunikacji i specyfika elemntu \emph{canvas} -- pozwalająca na rysowanie tylko na wierzchu elementu -- wymusza rysowanie elementów na widgetach w odpowiedniej kolejności. Jest to sprzeczne z asynchronicznością wywołań zwrotnych, dlatego przed rozpoczęciem rysowania danego widgetu ładowane są wszystkie potrzebne obrazki. W celu obejścia tego problemu została stworzona funkcja \emph{delayCallback} w listingu \ref{lst:source_images_delay}. Wymaga ona podania ilości obrazków do załadowania oraz funkcji zwrotnej (ang. callback), która będzie wywołana po załadowaniu wszystkich obrazów. Funkcja \emph{delayCallback} zwraca funkcję (domknięcie), które należy wywołać w każdym wywołaniu zwrotnym załadowania obrazu (\emph{onload}), aby mechanizm zadziałał.
 
 \label{lst:source_images_delay}
 \begin{lstlisting}[language=JavaScript,numbers=left,caption={Metoda łącząca wywołania wielu callbacków w jeden},label={lst:source_images_delay}]
