--- a/thesis/summary/summary.tex
+++ b/thesis/summary/summary.tex
@@ -14,3 +14,5 @@ Projekt będzie kontynuowany w następujących kierunkach:
   \item utworzenie wersji serwera dla systemów \emph{Windows} oraz \emph{Mac OS},
   \item rozwinięcie możliwości aplikacji klienckiej przy wykorzystaniu elementów technologii \emph{HTML5}, które będą dostępne w przyszłości.
 \end{itemize}
+
+Stworzona implementacja jest w pełni otwarta --- kod źródłowy dostępny jest publicznie pod adresem \url{https://gitorious.org/kde-appstream/kde-appstream}.
