--- a/thesis/theory/qt.tex
+++ b/thesis/theory/qt.tex
@@ -12,12 +12,12 @@ Aplikacje \emph{Qt} tworzone są w języku C++ rozszerzonym o dodatkowe słowa k
 
 \emph{Qt} wspiera największe platformy takie jak:
 \begin{itemize}
-\item Windows
-\item Windows CE
-\item Symbian
-\item OS X
-\item X11 (Linux, FreeBSD, Solaris, AIX i inne)
-\item Maemo, MeeGo
+\item Windows,
+\item Windows CE,
+\item Symbian,
+\item OS X,
+\item X11 (Linux, FreeBSD, Solaris, AIX i inne),
+\item Maemo, MeeGo.
 \end{itemize}
 
 Framework w wersji 5, która jest akutalnie w fazie beta, ma być dostępny również na wszystkie popularne platformy mobilne takie jak Android, iOS i Windows 8.
