--- a/thesis/problem_definition/server-flow.tex
+++ b/thesis/problem_definition/server-flow.tex
@@ -1,3 +1,9 @@
+Moduł serwera służący do przesyłu danych między aplikacją a klientem złożony jest z dwóch głównych części:
+\begin{enumerate}
+\item komunikacji z aplikacją,
+\item komunikacji z klientem.
+\end{enumerate}
+Komunikują się one przesyłając dane w formacie JSON. Event Dispather posiada jedno wejście przyjmujące opis zdarzeń zaistniałych po stronie klienta. Event Filter posiada dwa wyjścia, którymi przekazuje dane do serwera WebSocket, który następnie przekazuje je klientowi. Jedno wyjście przekazuje opis graficznych elementów interfejsu. Drugie natomiast obrazy w formacie PNG. Powód dla którego postanowiono oddzielić przesyłąnie obrazów od przesyłania opisu w formasie JSON jest zbyt duży narzut na rozmiar pliku graficznego po konwersji do postaci tekstowej. Serwer WebSocket nie wysyła więc obrazów bezpośrednio do klienta. Przesyła mu jedynie indentyfikator obrazu a same dane są przekazywane do serwera obrazów, który stanowi bufor dla plików graficznych. Bufor ten jest na bieżąco opróżniany w momencie gdy klient zdecyduje się pobrać dany obraz.
 
 \begin{figure}[H]
 \centering
