--- a/thesis/introduction/introduction.tex
+++ b/thesis/introduction/introduction.tex
@@ -1,16 +1,16 @@
 
-W dzisiejszych czasach coraz bardziej powszechne staje się wykorzystanie przeglądarek do zadań, do których wcześniej używane były duże aplikacje klienckie. Powstają rozwiązania, które starają się oddzielić logikę obliczeniową od warstwy prezentacji, przenosząc jednocześnie tę pierwszą na stronę serwera. Rozwój technologii HTML5 rozszerzającej standard o elementy canvas, websocket, webworkers i inne umożliwia tworzenie aplikacji o możliwościach takich samych jakie niegdyś były dostępne tylko w programach desktopowych. Co więcej gwarantuje międzyplatformowość nie tylko w rozumieniu softwareowym -- jedna aplikacja dostępna jest zarówno na komputerach osobistych, tabletach, telefonach i innych urządzeniach wyposażonych w nowoczesną przeglądarkę. Przy użyciu bardzo związanej z HTML5 technologii CSS3 możliwie jest tworzenie jednej aplikacji, która będzie użytkowalna niezależnie od wielkości ekranu urządzenia.\cite{responsive}
+W dzisiejszych czasach coraz bardziej powszechne staje się wykorzystanie przeglądarek do zadań, do których wcześniej używane były duże aplikacje klienckie. Powstają rozwiązania, które starają się oddzielić logikę obliczeniową od warstwy prezentacji, przenosząc jednocześnie tę pierwszą na stronę serwera. Rozwój technologii \emph{HTML5} rozszerzającej standard o elementy canvas, websocket, webworkers i inne umożliwia tworzenie aplikacji o możliwościach takich samych jakie niegdyś były dostępne tylko w programach desktopowych. Co więcej gwarantuje międzyplatformowość nie tylko w rozumieniu softwareowym -- jedna aplikacja dostępna jest zarówno na komputerach osobistych, tabletach, telefonach i innych urządzeniach wyposażonych w nowoczesną przeglądarkę. Przy użyciu bardzo związanej z \emph{HTML5} technologii \emph{CSS3} możliwie jest tworzenie jednej aplikacji, która będzie użytkowalna niezależnie od wielkości ekranu urządzenia.\cite{responsive}
 
 W niektórych rozwiązaniach zastąpienie starych aplikacji desktopowych nowymi aplikacjami webowymi (przeglądarkowymi) jest jednak niemożliwe, czasochłonne lub zbyt kosztowne.
 
-Podczas badań rynku pod kątem aktualnie dostępnych technologii dostrzeżono braki w rozwiązaniach umożliwiających zdalną interakcję z pojedynczymi aplikacjami. Większość z rozwiązań dostępnych na rynku wymusza udostępnienie całego pulpitu oraz wymaga od użytkownika końcowego (klienta) posiadania odpowiedniego, nierzadko płatnego oprogramowania (np. TeamViewer, VNC, Citrix, X11 i inne). Celem projektu jest stworzenie alternatywy wymagającej od strony klienta jedynie przeglądarki obsługującej HTML5 bez konieczności instalacji jakichkolwiek pluginów (np. Java, Flash).
+Podczas badań rynku pod kątem aktualnie dostępnych technologii dostrzeżono braki w rozwiązaniach umożliwiających zdalną interakcję z pojedynczymi aplikacjami. Większość z rozwiązań dostępnych na rynku wymusza udostępnienie całego pulpitu oraz wymaga od użytkownika końcowego (klienta) posiadania odpowiedniego, nierzadko płatnego oprogramowania (np. \emph{TeamViewer}, \emph{VNC}, \emph{Citrix}, \emph{X11} i inne). Celem projektu jest stworzenie alternatywy wymagającej od strony klienta jedynie przeglądarki obsługującej \emph{HTML5} bez konieczności instalacji jakichkolwiek pluginów (np. \emph{Java}, \emph{Flash}).
 
-Głównym wzorcem dla tej pracy jest projekt GTK+ Broadway powstały w 2011 roku oferujący dostęp przez przeglądarkę internetową do aplikacji działających pod kontrolą biblioteki GTK na zdalnym serwerze. Do tej pory nie istniało rozwiązanie oferujące podobną funkcjonalność dla biblioteki Qt i stworzony na potrzeby tej pracy projekt jest pierwszą taką implementacją. Kluczowym czynnikiem wyróżniającym tę pracę na tle innych jest innowacyjny sposób przesyłu danych do wizualizacji okien i ich elementów, który nie opieraja się na transmisji bitmap. Zamiast pełnych bitmap przesyłane są informacje sterującę rysowaniem pochodzące z silnika renderującego QT.
-Takie rozwiązanie wykorzysta pełne możliwości elementu \emph{canvas} z HTML5 i pozwoli na przetestowanie praktycznej implementacji większości dostępnych funkcjonalności.
+Głównym wzorcem dla tej pracy jest projekt \emph{GTK Broadway} powstały w 2011 roku oferujący dostęp przez przeglądarkę internetową do aplikacji działających pod kontrolą biblioteki \emph{GTK} na zdalnym serwerze. Do tej pory nie istniało rozwiązanie oferujące podobną funkcjonalność dla biblioteki \emph{Qt} i stworzony na potrzeby tej pracy projekt jest pierwszą taką implementacją. Kluczowym czynnikiem wyróżniającym tę pracę na tle innych jest innowacyjny sposób przesyłu danych do wizualizacji okien i ich elementów, który nie opieraja się na transmisji bitmap. Zamiast pełnych bitmap przesyłane są informacje sterującę rysowaniem pochodzące z silnika renderującego \emph{Qt}.
+Takie rozwiązanie wykorzysta pełne możliwości elementu \emph{canvas} z \emph{HTML5} i pozwoli na przetestowanie praktycznej implementacji większości dostępnych funkcjonalności.
 
 \subsubsection{Zawartość pracy}
 
-W rozdziale 2 zostały krótko przedstawione użyte technologie - HTML5, biblioteka Qt i projekt GTK Broadway. Rozdział 3 opisuje problem i prototypową propozycję rozwiązania - protokół komunikacyjny, sposób interakcji użytkownika oraz proste zabezpieczenie serwera. Rozdział 4 opisuje dokładnie implementację. Z racji na swoją długość został podzielony na kilka części. Osobno zaprezentowano protokół, system zdarzeń po stronie klienta (przeglądarki) oraz szczegóły implementacji po obu stronach. W tym rozdziale zawarte zostały również informacje o licznych napotkanych problemach przy tworzeniu projektu. W rozdziale 5 zaprezentowano wyniki testów w środowisku lokalnym oraz w Internecie.
+W rozdziale 2 krótko przedstawiono użyte technologie --- \emph{HTML5}, biblioteka \emph{Qt} i projekt \emph{GTK Broadway}. Rozdział 3 zawiera opis problemu i prototypową propozycję rozwiązania --- protokół komunikacyjny, sposób interakcji użytkownika oraz proste zabezpieczenie serwera. W rozdziale 4 opisano implementację. Z racji na swoją długość został on podzielony na kilka części. Osobno zaprezentowano protokół, system zdarzeń po stronie klienta (przeglądarki) oraz szczegóły implementacji po obu stronach architektury. W tym rozdziale zawarte zostały również informacje o licznych napotkanych problemach przy tworzeniu projektu. W rozdziale 5 zaprezentowano wyniki testów w środowisku lokalnym oraz w Internecie.
 Tablica \ref{tab:podzial} przedstawia podział podczas pisania rozdziałów pracy.
 
 \begin{table}[H]
