--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -115,7 +115,8 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 
 \bibliography{bibliography}
 
-\chapter{Dodatki}
+\appendix
+\chapter{Fragmenty kodu źródłowego}
 \input{addons/addons.tex}
 
 %+Make Index
